<resources>
    <string name="app_name">CrudKotlinaso</string>
    <string name="empty_text"></string>
    <string name="btnAll">See All</string>
    <string name="btnOne">See One</string>
    <string name="MainWindow">Main Window</string>
    <string name="Back">Back</string>
    <string name="Id">Id</string>
    <string name="Title">Title</string>
    <string name="Body">Body</string>
    <string name="Search">Search</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="CreateNP">Create New Post</string>
    <string name="Create">Create</string>
    <string name="GoToAll">See All Posts</string>
    <string name="GoToCreate">Create Post</string>
</resources>